Fix sass spacing uniformity

--- a/src/components/intro/intro.sass
+++ b/src/components/intro/intro.sass
@@ -7,16 +7,20 @@
   background: $primary
   text-align: center
   margin: 15px 15px 0
+
   .flex-wrap
     padding: 60px 20px
+
   h1
     line-height: 1.2
     font-size: 2em
+
   h2
     font-size: 1em
     line-height: 1.4
     margin: 20px 0 20px
     font-weight: normal
+
   .scroll
     color: white
     display: inline-block
@@ -25,8 +29,10 @@
     transition: opacity 0.2s
     &:hover
       opacity: 0.8
+
     .fa
       margin-left: 8px
+
   .flex-box
     max-width: 300px
     margin: 0 auto
@@ -36,16 +42,14 @@
     height: 100vh
     max-width: $max-width
     margin: 0 auto
-    +media-breakpoint-up(md)
-      min-height: 800px
-      margin-bottom: 40px
+    min-height: 800px
+    margin-bottom: 40px
     .flex-wrap
       height: 100%
       display: flex
       align-items: center
       justify-content: center
-      +media-breakpoint-up(md)
-        padding-bottom: 327px
+      padding-bottom: 327px
     .flex-box
       max-width: $max-width-centered-content
     .scroll
@@ -57,6 +61,7 @@
   position: relative
   +media-breakpoint-up(md)
     margin-top: -327px
+
   img
     max-width: 200px
     margin: 0 auto
@@ -65,6 +70,7 @@
     z-index: 2
     +media-breakpoint-up(md)
       max-width: 350px
+
   .desk-bg
     position: absolute
     top: 0
